--- a/services/web-app/components/do-dont/do-dont.module.scss
+++ b/services/web-app/components/do-dont/do-dont.module.scss
@@ -15,7 +15,7 @@
 // Row
 //---------------------------------------
 .do-dont-row [class*='grid'] {
-  margin-top: spacing.$spacing-07;
+  // margin-top: spacing.$spacing-07;
 
   @include breakpoint.breakpoint('md') {
     margin-bottom: 0;
