--- a/services/web-app/components/markdown/markdown.module.scss
+++ b/services/web-app/components/markdown/markdown.module.scss
@@ -4,7 +4,7 @@
  * This source code is licensed under the Apache-2.0 license found in the
  * LICENSE file in the root directory of this source tree.
  */
-
+/* stylelint-disable declaration-no-important */
 @use '@carbon/react/scss/breakpoint' as breakpoint;
 @use '@carbon/react/scss/spacing' as spacing;
 @use '@carbon/react/scss/type' as type;
@@ -17,8 +17,9 @@
   margin-top: spacing.$spacing-06;
 }
 
+// override styles on component below h4 to not have any spacing
 .h4-container + * {
-  margin-top: 0;
+  margin-top: 0 !important;
 }
 
 .h1-container {
